--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
-CMakeLists.txt.user
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# Dependency makefiles
+*.d
+
+# Compiled executable
+# custom-sdl-menu
+# custom-sdl-menu.exe
+
+# build directory
+build
+Debug
+Release
+MinSizeRel
+RelWithDebInfo
+out
+
+# CMake
 CMakeCache.txt
 CMakeFiles
+cmake_install.cmake
+Makefile
+CMakeLists.txt.user
 CMakeScripts
 Testing
 Makefile
@@ -9,3 +40,18 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# Eclipse
+.cproject
+.project
+.settings/
+
+# Clion
+.idea/
+CPackConfig.cmake
+CPackSourceConfig.cmake
+*.cbp
+
+# VSCode
+.vscode/
+.vs/
